--- a/core/UI/SampleWeb/templates/Login/home.html
+++ b/core/UI/SampleWeb/templates/Login/home.html
@@ -1,4 +1,6 @@
 {% extends 'Login/base.html' %}
+{% load static %}
+
 {% block css %}
     <link href="/static/Login/home.css" rel="stylesheet">
 {% endblock css %}
