--- a/core/UI/SampleWeb/templates/Login/secrets.html
+++ b/core/UI/SampleWeb/templates/Login/secrets.html
@@ -6,6 +6,8 @@
 THIS IS A SECRET!</title>
 </head>
 <body>
-
+<p>I love Django</p>
+<a href = "{% url 'Login:result' %}">Go Back</a>
+{% add '4' '7' %}
 </body>
 </html>
